--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,86 @@
-node_modules
-plans
-.next
-out
+# Dependencies
+node_modules/
+.pnp/
+.pnp.js
+
+# Environment files
+.env
 .env.local
-.env.*.local
-/generated/prisma
+.env.development.local
+.env.test.local
+.env.production.local
+backend/.env
+frontend/.env
+frontend/.env.local
+frontend/.env.development.local
+frontend/.env.test.local
+frontend/.env.production.local
+
+# Build outputs
+dist/
+build/
+out/
+
+# Next.js
+.next/
+frontend/.next/
+frontend/out/
+
+# Prisma generated files
+backend/generated/
+/generated/
+
+# TypeScript
+*.tsbuildinfo
+next-env.d.ts
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Testing
+coverage/
+.nyc_output/
+
+# IDE and editors
+.vscode/
+.idea/
+*.swp
+*.swo
+*.sublime-workspace
+*.sublime-project
+
+# OS files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Debug
+.pnpm-debug.log*
+
+# Vercel
+.vercel
+
+# Cache
+.cache/
+.eslintcache
+.stylelintcache
+
+# Misc
+*.pem
+.turbo
+
+# Test files (optional - remove if you want to track test data)
+backend/test-register.json
+
+# Plans (if you want to keep these private)
+plans/
